# polymind

.claude/skills/polymind/.claude-plugin/: plugin.json
.claude/skills/polymind/skills/status/: SKILL.md
council/: README.md
council/.claude/skills/polymind/skills/ask/: SKILL.md
council/polymind/: pyproject.toml
council/polymind/src/polymind/: __main__.py  debate.py  models.py
council/polymind/src/polymind/providers/: base.py  grok.py  perplexity.py
council/polymind/src/polymind/web/static/: index.html  style.css
polymind/src/polymind/: cli.py  config.py  orchestrator.py  renderer.py
polymind/src/polymind/providers/: __init__.py  gemini.py  openai.py
polymind/src/polymind/web/: server.py
polymind/src/polymind/web/static/: app.js
